task N-1: the issue with record-builder is resolved